ms-card/src/main/java/com/example/mscard/error/CardInsufficientBalanceException.java
package com.example.mscard.error;

public class CardInsufficientBalanceException extends CommonException{
    public CardInsufficientBalanceException(String errorMessage) {
        super(ErrorCodes.INSUFFICIENT_BALANCE, errorMessage);
    }
}
